# viral_insights_crew

./: .gitignore  README.md  pyproject.toml
api/: main.py
reports/: market_instights.md  marketing_strategy.md  niche_content_samples.md  trend_report.md  trend_tweet.md
src/visual_insights_crew/: crew.py  main.py
src/visual_insights_crew/config/: agents.yaml  tasks.yaml
