[project]
name = "visual_insights_crew"
version = "0.1.0"
description = "visual_insights_crew using crewAI"
authors = [{ name = "Thomas Doyle-Engler", email = "tpdoyle87@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
visual_insights_crew = "visual_insights_crew.main:run"
run_crew = "visual_insights_crew.main:run"
train = "visual_insights_crew.main:train"
replay = "visual_insights_crew.main:replay"
test = "visual_insights_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
